--- a/3D-Diffusion-Policy/diffusion_policy_3d/config/task/kortex_pour.yaml
+++ b/3D-Diffusion-Policy/diffusion_policy_3d/config/task/kortex_pour.yaml
@@ -27,7 +27,7 @@ env_runner:
 
 dataset:
   _target_: diffusion_policy_3d.dataset.kortex_dataset.KortexDataset
-  zarr_path: data/kortex_data/pour_50.zarr
+  zarr_path: data/kortex_data/pour.zarr
   horizon: ${horizon}
   pad_before: ${eval:'${n_obs_steps}-1'}
   pad_after: ${eval:'${n_action_steps}-1'}
