--- a/3D-Diffusion-Policy/diffusion_policy_3d/config/task/kortex_pour.yaml
+++ b/3D-Diffusion-Policy/diffusion_policy_3d/config/task/kortex_pour.yaml
@@ -17,7 +17,7 @@ shape_meta: &shape_meta
   action:
     shape: [10]
 
-env_runner:
+env_runner: null
   # _target_: diffusion_policy_3d.env_runner.base_runner.KortexRunner
   # max_steps: 5000
   # n_obs_steps: ${n_obs_steps}
